@@ -3,14 +3,17 @@ package pt.up.fe.comp2024.symboltable;
 import pt.up.fe.comp.jmm.analysis.table.Symbol;
 import pt.up.fe.comp.jmm.analysis.table.SymbolTable;
 import pt.up.fe.comp.jmm.analysis.table.Type;
-import pt.up.fe.comp2024.ast.TypeUtils;
 import pt.up.fe.specs.util.exceptions.NotImplementedException;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
 public class JmmSymbolTable implements SymbolTable {
+    private final List<String> imports;
+    private final String superClass;
+
+    private final List<Symbol> fields;
 
     private final String className;
     private final List<String> methods;
@@ -18,11 +21,17 @@ public class JmmSymbolTable implements SymbolTable {
     private final Map<String, List<Symbol>> params;
     private final Map<String, List<Symbol>> locals;
 
-    public JmmSymbolTable(String className,
+    public JmmSymbolTable(List<String> imports,
+                          String superClass,
+                          List<Symbol> fields,
+                          String className,
                           List<String> methods,
                           Map<String, Type> returnTypes,
                           Map<String, List<Symbol>> params,
                           Map<String, List<Symbol>> locals) {
+        this.imports = imports;
+        this.superClass = superClass;
+        this.fields = fields;
         this.className = className;
         this.methods = methods;
         this.returnTypes = returnTypes;
@@ -30,45 +39,48 @@ public class JmmSymbolTable implements SymbolTable {
         this.locals = locals;
     }
 
+
+
     @Override
     public List<String> getImports() {
-        throw new NotImplementedException();
+        return this.imports;
     }
 
     @Override
     public String getClassName() {
-        return className;
+        return this.className;
     }
+
 
     @Override
     public String getSuper() {
-        throw new NotImplementedException();
+        return this.superClass;
     }
 
     @Override
     public List<Symbol> getFields() {
-        throw new NotImplementedException();
+        return this.fields;
     }
 
     @Override
     public List<String> getMethods() {
-        return Collections.unmodifiableList(methods);
+        return this.methods;
     }
 
     @Override
     public Type getReturnType(String methodSignature) {
         // TODO: Simple implementation that needs to be expanded
-        return new Type(TypeUtils.getIntTypeName(), false);
+        return this.returnTypes.get(methodSignature);
     }
 
     @Override
     public List<Symbol> getParameters(String methodSignature) {
-        return Collections.unmodifiableList(params.get(methodSignature));
+        return this.params.get(methodSignature) == null ? List.of() : this.params.get(methodSignature);
     }
 
     @Override
     public List<Symbol> getLocalVariables(String methodSignature) {
-        return Collections.unmodifiableList(locals.get(methodSignature));
+        return this.locals.get(methodSignature) == null ? List.of() : this.locals.get(methodSignature);
     }
 
 }
